[package]
name = "simple_delay"
version = "0.1.0"
edition = "2021"
authors = ["Max Genson <mail@maxgenson.de>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs"] }
yanel_dsp = { git = "https://github.com/backtail/yanel_dsp", rev = "52d9cf9" }